# ai-gateway

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: cache.py  config.py  database.py  main.py
app/models/: __init__.py  audit.py  policy.py  usage.py  user.py
app/providers/: __init__.py  azure_provider.py  base.py  bedrock_provider.py  openai_provider.py
app/routers/: admin.py  gateway.py  health.py  policies.py  usage.py
app/schemas/: auth.py  gateway.py  policy.py  usage.py
app/services/: __init__.py  audit.py  cache.py  cost_tracker.py  policy_engine.py  rate_limiter.py  router.py
dashboard/: package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/policies/: page.tsx
dashboard/src/app/teams/: page.tsx
dashboard/src/app/usage/: page.tsx
dashboard/src/components/: CostChart.tsx  StatsCards.tsx
dashboard/src/lib/: api.ts
docs/: learning-guide.html
tests/: conftest.py  test_admin.py  test_cache.py  test_cost_tracker.py  test_health.py  test_policy_engine.py  test_router.py  test_schemas.py
